# reviewbot

./: .gitignore  COMMANDS.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  vercel.json
examples/: sample_diff.txt
hooks/: install-hook.sh  pre-commit
reviewbot/: cli.py  clients.py  config.py  diff_parser.py  gemini_client.py  git_utils.py  gitignore.py  groq_client.py  history.py  models.py  nano.1100.save  ollama_client.py  output_parser.py  prompt_builder.py  reporter.py
reviewbot/prompts/: detail.md  errors.md  explain.md  perf.md  security.md  style.md
tests/: test_parser.py
web/: index.html
